fix: add z-index

--- a/src/index.css
+++ b/src/index.css
@@ -130,5 +130,6 @@ footer {
 #box-header { 
   position: fixed;
   top: 0;
+  z-index: 1;
   width: 100%; 
 }
